# dj-hue

./: .gitignore  CLAUDE.md  PATTERN_TEST_RESULTS.md  README.md  config.example.yaml  config.yaml  hue_credentials.json  pyproject.toml  strudel-pattern.skill  test_strobe_frames.py
docs/: SPATIAL_PATTERNS_PROPOSAL.md  architecture-critique.md  future-ideas.md  groups.md  hot-reload.md  index.md  pattern-engine.md  scenes.md  strudel-system.md  touch-controller.md
patterns/: alternate.pattern  alternating_pulse.pattern  ambient.py  ambient_color_drift.pattern  ambient_counter_zones.pattern  ambient_dual_zone_drift.pattern  ambient_gentle_wave.pattern  ambient_lazy_fireflies.pattern  ambient_perimeter_crawl.pattern  ambient_random_colors.pattern  ambient_slow_breathe.pattern  ambient_staggered_breathe.pattern  ambient_tidal.pattern  ambient_warm_ember.pattern  aurora.pattern  autonomous.pattern  autonomous.py  bar_sine_sawtooth.pattern  beat_flash.pattern  blue_fade_strobe.pattern  bullseye.pattern  chase.pattern  chase.py  classic.py  comet.pattern  downbeat.pattern  duo_color_flash_swap.pattern  energy.py  fire.pattern  flash.py  gentle.pattern  green_cascade.pattern  half_bar_sawtooth_pulse.pattern  heartbeat.pattern  layered_sawtooth.pattern  left_right.pattern  left_right_fast.pattern  lightning.pattern  perimeter_buildup_ceiling_accent.pattern  ping_pong_wave.pattern  (+38 more)
patterns/examples/: rainbow_chase.py  stereo_bounce.py
scripts/: add_category.py  migrate_patterns.py
touch-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+106 files in other folders)
